[metadata]
name = qget
version = attr: qget.__version__
author = Dominik Wojtasik
author_email = d.b.wojtasik@gmail.com
description = Async http(s) downloader
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/dwojtasik/qget
project_urls =
    Bug Tracker = https://github.com/dwojtasik/qget/issues
license = Apache 2
license_files = LICENSE
classifiers =
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: System :: Networking

[options]
python_requires = >=3.7
packages = qget
install_requires =
  aiofiles>=0.8.0
  aiohttp>=3.8.1
  aiohttp_socks>=0.7.1
  tqdm>=4.63.1

[pep8]
max-line-length = 119

[flake8]
max-line-length = 119